@@ -1,3 +1,11 @@
+2007-06-25  Sam Weinig  <sam@webkit.org>
+
+        Reviewed by Adam Roben.
+
+        Annotate prototypes by adding "Prototype" subtitle.
+
+        * page/inspector/ResourcePanel.js:
+
 2007-06-25  George Staikos  <staikos@kde.org>
 
         Reviewed by Zack.
